<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionActivity"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    >
<!--    requirements-->
<!--    - entrer username-->
<!--    - entrer password-->
<!--    - bouton connection-->
<!--    - bouton inscription-->
    <EditText
        android:id="@+id/nomUtilisateurConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activConnec_EditTextUsername_Hint"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp">
    </EditText>
    <EditText
        android:id="@+id/motDePasseConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activConnec_EditTextPw_Hint"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        android:padding="12dp">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btnInscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activInscrip_Btn_Inscription"
            android:layout_marginBottom="32dp"
            android:layout_marginHorizontal="30dp"
            android:padding="12dp">
        </Button>

        <Button
            android:id="@+id/btnConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginHorizontal="30dp"
            android:padding="12dp"

            android:text="@string/activInscrip_Btn_Connection">

        </Button>


    </LinearLayout>

</LinearLayout>